Fix spacing of dropdown menus

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -89,7 +89,7 @@ footer a {
   position: absolute;
   right: -10px;
   text-align: right;
-  top: 2.5rem;
+  top: 4.5rem;
   transition: opacity 0.5s ease;
   width: 200px;
 }
